# Vorkers

./: Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  test_coverage_report.txt
myproject/: settings.py  urls.py
vorkers/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
vorkers/migrations/: 0001_initial.py  0002_alter_vorkers_options.py
